--- a/AS2/project/templates/project/index.html
+++ b/AS2/project/templates/project/index.html
@@ -24,7 +24,7 @@
   <!-- Header Section -->
   <div class="relative">
     <div class="absolute top-2 left-2">
-      <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
       </svg>
     </div>
@@ -60,98 +60,49 @@
     </div>
   </div>
 
-  <!-- Scrollable Car Cards in 5x2 Style -->
-  <div class="px-4 pt-6">
-    <div class="relative">
-      <div class="overflow-x-auto overflow-y-hidden pb-4">
-        <div class="grid grid-rows-2 grid-flow-col auto-cols-max gap-4">
-          <!-- Car Cards -->
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://newtpm.s3-ap-southeast-1.amazonaws.com/vehicles/colors/img_32_1104_attitude_black_mica.png" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Toyota Fortuner</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://s7d1.scene7.com/is/image/hyundai/2024-elantra-limited-ultimate-red-vehicle-browse-hero:16-9?wid=640&hei=360&fmt=webp-alpha" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Hyundai Elantra</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://www.motortrend.com/uploads/sites/10/2021/08/2022-kia-k5-ex-sedan-angular-front.png" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Kia K5</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://pngimg.com/d/jimny_PNG9.png" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Suzuki Jimny</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://pngimg.com/d/mazda_PNG133.png" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Mazda MX - 5</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://static.autoforce.com/plugins/images/clientes/gwm/produtos/sd/miniaturas/haval-h6-gt/Haval_H6_GT_Azul_Cianita_001.png?v=002" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Haval H6 GT</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://www.motortrend.com/uploads/sites/10/2019/09/2019-porsche-718-boxster-convertible-angular-front.png?w=768&width=768&q=75&format=webp" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Porsche 718 Boxster</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://di-uploads-pod19.dealerinspire.com/hendricktoyotaconcord/uploads/2022/09/trim-2023-gr86.png" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Toyota GR86</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://inv.assets.sincrod.com/ChromeColorMatch/us/TRANSPARENT_cc_2025KIS100021_01_1280_M4B.png" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Kia Sorento</p>
-          </div>
-          <div class="bg-[#d9d9d9] rounded shadow w-40 p-2 text-center">
-            <img src="https://www.pngplay.com/wp-content/uploads/13/Volkswagen-Golf-GTI-Download-Free-PNG.png" class="h-24 mx-auto object-contain" />
-            <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Volkswagen Golf GTI</p>
-          </div>
-        </div>
-      </div>
-      <div class="text-right mt-4">
-        <a href="#" class="text-xs text-blue-600 font-semibold">View all cars</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- Top 3 Latest Favorite Cars -->
+  <!-- Car Grid (Vertical scroll) -->
   <div class="px-4 py-6">
-    <h2 class="text-center text-sm font-bold mb-4" style="font-family: 'Poppins', sans-serif; font-weight: 700;">Top 3 Latest Favorite Cars</h2>
-    <div class="relative">
-      <div id="carousel" class="snap-x snap-mandatory overflow-x-auto flex space-x-4 pb-2 scroll-smooth">
-        <div class="flex-shrink-0 snap-center w-full text-center">
-          <img src="https://purepng.com/public/uploads/large/purepng.com-red-porsche-911-gt3-rs-4-carcarvehicletransportporsche-961524661235vbivb.png" class="h-36 mx-auto object-contain" />
-        </div>
-        <div class="flex-shrink-0 snap-center w-full text-center">
-          <img src="https://www.pngplay.com/wp-content/uploads/13/Land-Rover-Defender-PNG-HD-Quality.png" class="h-36 mx-auto object-contain" />
-        </div>
-        <div class="flex-shrink-0 snap-center w-full text-center">
-          <img src="https://inv.assets.sincrod.com/ChromeColorMatch/us/TRANSPARENT_cc_2024BMC890021_01_1280_C31.png" class="h-48 mx-auto object-contain" />
-        </div>
+    <div class="grid grid-cols-2 gap-4">
+      <!-- Car Cards with proper Raleway font -->
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://newtpm.s3-ap-southeast-1.amazonaws.com/vehicles/colors/img_32_1104_attitude_black_mica.png" class="h-24 mx-auto object-contain" />
+        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Toyota Fortuner</p>
       </div>
-
-      <div class="flex justify-center mt-3">
-        <div class="flex gap-2">
-          <div class="w-2 h-2 rounded-full bg-gray-400"></div>
-          <div class="w-2 h-2 rounded-full bg-gray-300"></div>
-          <div class="w-2 h-2 rounded-full bg-gray-300"></div>
-        </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://s7d1.scene7.com/is/image/hyundai/2024-elantra-limited-ultimate-red-vehicle-browse-hero:16-9?wid=640&hei=360&fmt=webp-alpha" class="h-24 mx-auto object-contain" />
+        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Hyundai Elantra</p>
       </div>
-
-      <div class="text-right mt-1 px-4">
-        <a href="#" class="text-xs text-gray-700 font-semibold whitespace-nowrap">View All Favorite</a>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://inv.assets.sincrod.com/ChromeColorMatch/us/TRANSPARENT_cc_2025KIS100021_01_1280_M4B.png" class="h-24 mx-auto object-contain" />
+        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Kia Sorento</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://www.motortrend.com/uploads/sites/10/2021/08/2022-kia-k5-ex-sedan-angular-front.png" class="h-24 mx-auto object-contain" />
+        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Kia K5</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://pngimg.com/d/jimny_PNG9.png" class="h-24 mx-auto object-contain" />
+        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Suzuki Jimny</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://pngimg.com/d/mazda_PNG133.png" class="h-24 mx-auto object-contain" />
+        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Mazda MX - 5</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://www.motortrend.com/uploads/sites/10/2019/09/2019-porsche-718-boxster-convertible-angular-front.png?w=768&width=768&q=75&format=webp" class="h-24 mx-auto object-contain" />
+        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Porsche 718 Boxster</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://di-uploads-pod19.dealerinspire.com/hendricktoyotaconcord/uploads/2022/09/trim-2023-gr86.png" class="h-24 mx-auto object-contain" />
+        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Toyota GR86</p>
       </div>
     </div>
-  </div>
 
-  <script>
-    const carousel = document.getElementById('carousel');
-    let index = 0;
-    setInterval(() => {
-      index = (index + 1) % 3;
-      carousel.scrollTo({ left: carousel.clientWidth * index, behavior: 'smooth' });
-    }, 3000);
-  </script>
+    <!-- Back to Main -->
+    <div class="text-right mt-6">
+      <a href="index.html" class="text-xs text-blue-600 font-semibold">Back to Main</a>
+    </div>
+  </div>
 
 </body>
 </html>
