--- a/AS2/project/templates/project/index.html
+++ b/AS2/project/templates/project/index.html
@@ -14,93 +14,105 @@
     }
     .autohub-title {
       font-family: 'Exo 2', sans-serif;
-      font-size: 24px;
     }
   </style>
 </head>
 
 <body class="font-sans">
 
-  <!-- Header Section -->
-  <div class="relative">
-    <div class="absolute top-2 left-2">
-      <svg class="w-6 h-6 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+  <!-- Header -->
+  <div class="relative bg-[#7F7F7F] h-[168px] flex items-center justify-between px-5" style="width: 430px; flex-shrink: 0;">
+    <!-- Menu Icon -->
+    <div class="w-6 h-6">
+      <svg class="w-full h-full text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
       </svg>
     </div>
-    <div class="absolute top-10 left-3 flex items-center space-x-1">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Flag_of_Brunei.svg" alt="Brunei Flag" class="w-4 h-3">
-      <span class="text-white text-sm">BND</span>
-    </div>
-    <img src="https://media.ed.edmunds-media.com/volkswagen/golf-gti/2024/oem/2024_volkswagen_golf-gti_4dr-hatchback_380-autobahn_fq_oem_1_1600.jpg" 
-         alt="Volkswagen Golf GTI" 
-         class="w-full h-[230px] object-cover">
-    <h1 class="absolute top-9 w-full text-center text-white autohub-title">AutoHub</h1>
-    <p class="absolute top-[188px] left-4 text-white text-[30px]" style="font-family: 'Montserrat', sans-serif; font-weight: 300;">
-      Find your next car.
-    </p>
-  </div>
 
-  <!-- Filter + Search -->
-  <div class="px-4 pt-4">
-    <div class="flex justify-end mb-2">
-      <button class="flex items-center gap-1 bg-[#d9d9d9] rounded-full px-4 py-1 shadow text-sm" style="font-family: 'Poppins', sans-serif; font-weight: 700;">
-        <img src="https://static.vecteezy.com/system/resources/thumbnails/012/174/332/small/simple-magnifying-icon-png.png" alt="Search" class="w-4 h-4"> SEARCH
-      </button>
-    </div>
-    <div class="flex flex-wrap justify-center items-center gap-2 text-[11px]" style="font-family: 'Raleway', sans-serif;">
-      <span class="font-semibold">BROWSE:</span>
-      <button class="bg-gray-300 px-3 py-1 rounded shadow">BRAND</button>
-      <button class="bg-gray-300 px-3 py-1 rounded shadow">PRICE</button>
-      <button class="bg-gray-300 px-3 py-1 rounded shadow">MODEL</button>
-      <button class="bg-gray-300 px-3 py-1 rounded shadow">SEATER</button>
-    </div>
-    <div class="text-right mt-1">
-      <a href="#" class="text-xs text-gray-700 font-semibold">Clear all</a>
+    <!-- Title Centered -->
+    <h1 class="absolute left-1/2 transform -translate-x-1/2 text-white text-base font-semibold autohub-title">
+      AutoHub
+    </h1>
+
+    <!-- Home Icon -->
+    <div class="w-6 h-6">
+      <svg class="w-full h-full text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 22V12h6v10" />
+      </svg>
     </div>
   </div>
 
-  <!-- Car Grid (Vertical scroll) -->
-  <div class="px-4 py-6">
-    <div class="grid grid-cols-2 gap-4">
-      <!-- Car Cards with proper Raleway font -->
-      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://newtpm.s3-ap-southeast-1.amazonaws.com/vehicles/colors/img_32_1104_attitude_black_mica.png" class="h-24 mx-auto object-contain" />
-        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Toyota Fortuner</p>
-      </div>
-      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://s7d1.scene7.com/is/image/hyundai/2024-elantra-limited-ultimate-red-vehicle-browse-hero:16-9?wid=640&hei=360&fmt=webp-alpha" class="h-24 mx-auto object-contain" />
-        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Hyundai Elantra</p>
-      </div>
-      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://inv.assets.sincrod.com/ChromeColorMatch/us/TRANSPARENT_cc_2025KIS100021_01_1280_M4B.png" class="h-24 mx-auto object-contain" />
-        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Kia Sorento</p>
-      </div>
-      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://www.motortrend.com/uploads/sites/10/2021/08/2022-kia-k5-ex-sedan-angular-front.png" class="h-24 mx-auto object-contain" />
-        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Kia K5</p>
-      </div>
-      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://pngimg.com/d/jimny_PNG9.png" class="h-24 mx-auto object-contain" />
-        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Suzuki Jimny</p>
-      </div>
-      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://pngimg.com/d/mazda_PNG133.png" class="h-24 mx-auto object-contain" />
-        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Mazda MX - 5</p>
-      </div>
-      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://www.motortrend.com/uploads/sites/10/2019/09/2019-porsche-718-boxster-convertible-angular-front.png?w=768&width=768&q=75&format=webp" class="h-24 mx-auto object-contain" />
-        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Porsche 718 Boxster</p>
-      </div>
-      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
-        <img src="https://di-uploads-pod19.dealerinspire.com/hendricktoyotaconcord/uploads/2022/09/trim-2023-gr86.png" class="h-24 mx-auto object-contain" />
-        <p class="text-sm mt-1" style="font-family: 'Raleway', sans-serif;">Toyota GR86</p>
-      </div>
+  <!-- Email + Heart -->
+  <div class="bg-white text-center py-4">
+    <p class="text-sm" style="font-family: 'Montserrat', sans-serif;">fahmihafizul@gmail.com</p>
+    <div class="text-center mt-2">
+      <svg class="w-6 h-6 mx-auto text-black" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4.318 6.318a4.5 4.5 0 0 1 6.364 0L12 7.636l1.318-1.318a4.5 4.5 0 1 1 6.364 6.364L12 21.364l-7.682-7.682a4.5 4.5 0 0 1 0-6.364z" />
+      </svg>
     </div>
+  </div>
 
-    <!-- Back to Main -->
-    <div class="text-right mt-6">
-      <a href="index.html" class="text-xs text-blue-600 font-semibold">Back to Main</a>
+  <!-- Car Grid -->
+  <div class="px-4 pb-10">
+    <div class="grid grid-cols-3 gap-3">
+      <!-- Car Cards -->
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://newtpm.s3-ap-southeast-1.amazonaws.com/vehicles/colors/img_32_1104_attitude_black_mica.png" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Toyota Fortuner</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://s7d1.scene7.com/is/image/hyundai/2024-elantra-limited-ultimate-red-vehicle-browse-hero:16-9?wid=640&hei=360&fmt=webp-alpha" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Hyundai Elantra</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://www.motortrend.com/uploads/sites/10/2021/08/2022-kia-k5-ex-sedan-angular-front.png" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Kia K5</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://www.motortrend.com/uploads/sites/10/2022/10/2023-Haval-H6-GT-front-three-quarters-2.jpg" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Haval H6 GT</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://pngimg.com/d/jimny_PNG9.png" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Suzuki Jimny</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://pngimg.com/d/mazda_PNG133.png" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Mazda MX - 5</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://inv.assets.sincrod.com/ChromeColorMatch/us/TRANSPARENT_cc_2025KIS100021_01_1280_M4B.png" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Kia Sorento</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://di-uploads-pod21.dealerinspire.com/havalperth/uploads/2022/02/Haval-H6-Exterior-Red.png" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Haval H6</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://cdn.motor1.com/images/mgl/JXXrR/s1/2021-mazda6.jpg" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Mazda 6</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://www.motortrend.com/uploads/sites/10/2019/09/2019-porsche-718-boxster-convertible-angular-front.png?w=768&width=768&q=75&format=webp" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Porsche 718 Boxster</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://di-uploads-pod19.dealerinspire.com/hendricktoyotaconcord/uploads/2022/09/trim-2023-gr86.png" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Toyota GR86</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://images.hgmsites.net/lrg/2022-kia-carnival_100776443_l.jpg" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Kia Carnival</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://www.toyota.com/imgix/responsive/images/mlp/colorizer/2022/camry/1J9/1.png" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Toyota Camry</p>
+      </div>
+      <div class="bg-[#d9d9d9] rounded shadow p-2 text-center">
+        <img src="https://images.dealer.com/ddc/vehicles/2024/Ford/Bronco/SUV/trim_Base_8f6a7188/color/Eruption%20Green%20Metallic-AE-42,57,48-640-en_US.jpg" class="h-20 mx-auto object-contain" />
+        <p class="text-xs mt-1 font-['Raleway']">Ford Bronco</p>
+      </div>
     </div>
   </div>
 
