--- a/AS2/project/templates/project/index.html
+++ b/AS2/project/templates/project/index.html
@@ -165,7 +165,7 @@
         </div>
       </div>
       <div class="text-right mt-4">
-        <a href="{% url 'viewallcars' %}" class="text-xs text-blue-600 font-semibold">View all cars</a>
+        <a href="{% url 'viewallcars' %}" class="text-xs text-blue-600 font-semibold whitespace-nowrap">View all cars</a>
       </div>
     </div>
   </div>
@@ -195,7 +195,7 @@
       </div>
 
       <div class="text-right mt-1 px-4">
-        <a href="#" class="text-xs text-gray-700 font-semibold whitespace-nowrap">View All Favorite</a>
+        <a href="{% url 'profile' %}" class="text-xs text-gray-700 font-semibold whitespace-nowrap">View All Favorite</a>
       </div>
     </div>
   </div>
