--- a/AS2/project/templates/project/index.html
+++ b/AS2/project/templates/project/index.html
@@ -197,7 +197,7 @@
         </div>
       </div>
       <div class="text-right mt-4">
-        <a href="{% url 'viewallcars' %}" class="text-xs text-blue-600 font-semibold whitespace-nowrap">View all cars</a>
+        <a href="viewallcars.html" class="text-xs text-blue-600 font-semibold whitespace-nowrap">View all cars</a>
       </div>
     </div>
   </div>
