updated the log in link in forget password page

--- a/AS2/project/templates/project/forgetpassword.html
+++ b/AS2/project/templates/project/forgetpassword.html
@@ -53,7 +53,7 @@
     </form>
 
     <!-- Back to login -->
-    <p class="mt-6 text-sm text-gray-800">Already have account? <a href="#" class="underline">Log in</a></p>
+    <p class="mt-6 text-sm text-gray-800">Already have account? <a href="login.html" class="underline">Log in</a></p>
   </div>
 </body>
 </html>
