updated create account page

--- a/AS2/project/templates/project/login.html
+++ b/AS2/project/templates/project/login.html
@@ -67,8 +67,8 @@
 
       <!-- Links -->
       <div class="flex justify-between mt-4 text-sm font-normal text-black">
-        <a href="#">CREATE ACCOUNT</a>
-        <a href="#">FORGOT PASSWORD</a>
+        <a href="createaccount.html">CREATE ACCOUNT</a>
+        <a href="forgetpassword.html">FORGOT PASSWORD</a>
       </div>
     </div>
     <script>
