--- a/AS2/project/templates/project/profile.html
+++ b/AS2/project/templates/project/profile.html
@@ -84,8 +84,7 @@
 
     <!-- Home Icon -->
     
-<div class="absolute top-4 right-4 w-6 h-6">
-
+    <div onclick="window.location.href='index.html'" class="cursor-pointer absolute top-4 right-4 w-6 h-6">
       <svg class="w-full h-full text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 22V12h6v10" />
